--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <section id="home" class="page">
   <div class="suDiMe">
     <div class="info">
-      <h1>QUALCHE INFORMAZIONE SU DI ME</h1>
+      <h1>CHI SONO?</h1>
       <p>Ciao sono Simone Rossi, studente di informatica al quarto anno dell'IIS Castelli di Brescia.
         L'informatica è da sempre la mia passione principale; di fatto svolgo diversi progetti, non solo scolastici
         ma anche in autonomia. Inoltre, partecipo al PCTO Helios che si svolge periodicamente ogni martedì
